tests/solidity/bad/nobytecode.sol
abstract contract Abstract {
  function nothere() pure public virtual;
  function echidna_nothere() pure public virtual returns (bool);
}
